--- a/Markdown/Abp/abp20180313.md
+++ b/Markdown/Abp/abp20180313.md
@@ -9924,4 +9924,4 @@ public class SomeApplicationService : ITransientDependency
 }
 ```
 
-这样你就可以在相同的事务下，同时使用基于EF的仓储和Dapper的仓储了。
+这样你就可以在相同的事务下，同时使用基于EF的仓储和Dapper的仓储了。
